# Sinapsis

./:   .gitignore  POSTMAN_ANALISIS_IA_README.md  README.md  Sinapsis_Analisis_IA.postman_collection.json  docker-compose.yml  init.sql  schema.sql
microservice/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
microservice/.github/workflows/: ci.yml
microservice/docs/: CHANGELOG.md  DESIGN.md  GLOBAL_ARCHITECTURE.md  PROJECT_ARCHITECTURE.md  README.md
microservice/docs/specs/template/: plan-template.md  spec-template.md
microservice/docs/specs/v0.1.0-scaffolding/: plan.md  spec.md
microservice/docs/specs/v0.2.0-domain-contracts/: plan.md  spec.md
microservice/docs/specs/v0.3.0-bundle-registry/: plan.md  spec.md
microservice/docs/specs/v0.4.0-inference-pipeline/: plan.md  spec.md
microservice/docs/specs/v0.5.0-presentation-publisher/: plan.md  spec.md
microservice/docs/specs/v1.0.0-production-hardening/: plan.md  spec.md
microservice/docs/specs/v2.0.0-multi-model-output/: plan.md  spec.md
microservice/docs/specs/v2.1.0-bundle-config-adapters/: plan.md  spec.md
microservice/src/sinapsis_ai/: __init__.py  config.py  main.py
microservice/src/sinapsis_ai/application/: analysis_service.py  ports.py
microservice/src/sinapsis_ai/domain/: __init__.py  errors.py  models.py
microservice/src/sinapsis_ai/infrastructure/: __init__.py  bundle_adapters.py  bundle_registry.py  healthcheck.py  image_store.py  inference_engine.py  logging.py  output_extractors.py  publisher.py
microservice/src/sinapsis_ai/presentation/: __init__.py  consumer.py  retry_policy.py  schemas.py
microservice/tests/: conftest.py
microservice/tests/fixtures/: sample_request.json
microservice/tests/integration/: __init__.py  test_inference_smoke.py  test_rabbitmq_flow.py
microservice/tests/unit/: test_config.py  test_main.py
microservice/tests/unit/application/: __init__.py  test_analysis_service.py
microservice/tests/unit/domain/: test_errors.py  test_models.py
microservice/tests/unit/infrastructure/: __init__.py  test_bundle_adapters.py  test_bundle_registry.py  test_healthcheck.py  test_image_store.py  test_inference_engine.py  (+2 more)
(+97 files in other folders)
