[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sinapsis-ai"
version = "0.1.0"
description = "MONAI inference microservice for SINAPSIS — stateless RabbitMQ consumer"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "monai>=1.3",
    "torch>=2.2",
    "nibabel>=5",
    "requests>=2.31",
    "huggingface_hub>=0.23",
    "pytorch-ignite>=0.4.11",
    "pika>=1.3",
    "torchvision>=0.17",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sinapsis_ai"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "monai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pika.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nibabel.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q -m 'not integration'"
markers = [
    "integration: marks tests that require real infrastructure (RabbitMQ, network). Deselected by default.",
]
filterwarnings = [
    "error",
    # Third-party noise (torch/monai/hf emit deprecation/user warnings on import
    # and during inference); it must not break integration runs. Warnings raised
    # from sinapsis_ai code still fail tests.
    "ignore::DeprecationWarning:torch.*",
    "ignore::UserWarning:torch.*",
    "ignore::FutureWarning:torch.*",
    "ignore::DeprecationWarning:monai.*",
    "ignore::UserWarning:monai.*",
    "ignore::FutureWarning:monai.*",
    "ignore::DeprecationWarning:huggingface_hub.*",
    "ignore::UserWarning:huggingface_hub.*",
    "ignore::DeprecationWarning:ignite.*",
]

[tool.coverage.run]
source = ["sinapsis_ai"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
